# cuda-image-grayscale

./: CMakeLists.txt  README.md  kernel.cu  main.cpp
